Fixed alignment for navbar when in tablet/mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,10 +26,6 @@ div#root {
 
 .max-width {
   margin: 0 88px;
-  // max-width: 1800px;
-  @media screen and (max-width: 900px) {
-    // margin: 0 50px;
-  }
 }
 
 .shadow {
