--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,6 +12,10 @@ nav {
     width: 100%;
     margin: 0px 50px;
 
+    @media screen and (max-width: $break-banner-title) {
+      margin: 0px 20px;
+    }
+
     button {
       display: none;
       @media screen and (max-width: $break-large) {
